﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################

opsi-winst/opsi-script (4.12.3.15) experimental; urgency=low

  * oswebservice: avoid double /rpc in service url;

-- d.oertel <d.oertel@uib.de> Tue, 09 Jun 2020 15:00

opsi-winst/opsi-script (4.12.3.14) experimental; urgency=low

  * osparser: new flag: cmd64checked to avoid repeated checks for cmd64.exe
  * osmain: bool var runSilent used in cli parameter check and to call
    FBatchOberflaeche.setVisible(True/False);
  * osbatchgui: start FBatchOberflaeche visible=false ; fixes #4485

-- Detlef Oertel <d.oertel@uib.de>  Thu, 04 Jun 2020:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.13) experimental; urgency=low

  * osmain: bootmode: now using opsiclientagentconf
  * linux: osprocesses: ProcessIsRunning: look for exact match in 15 char shortcmd
  * osfunclin: os_shutdown()
  * osmain: (linux) try to direct reboot or shutdown

-- Detlef Oertel <d.oertel@uib.de>  thu, 12 Mar 2020:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.12) experimental; urgency=low

  * osmain: /batch + / productid (template+with admin):
    * if no connection to real server, retry with localhost
    * if no connection to localhost - run any way

-- Detlef Oertel <d.oertel@uib.de>  Tue, 10 Mar 2020:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.11) experimental; urgency=low

  * oswebservice: new function macosAgentActivated: boolean;
  * osmain: on macos: check macosAgentActivated
  * Info-os.plist: add opsi.icns file

-- Detlef Oertel <d.oertel@uib.de>  Wed, 26 Feb 2020:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.10) experimental; urgency=low

  * activate history logging again
  * osfunc / osparser: linkfolder: new link element window_state with the allowed values 'normal', 'min', 'max'

-- Detlef Oertel <d.oertel@uib.de>  Tue, 03 Feb 2020:15:00:00 +0200
